--- a/main.Rmd
+++ b/main.Rmd
@@ -1,10 +1,12 @@
 ---
-title: "Moi!"
+title: "Parma.Prog!"
 output: 
   flexdashboard::flex_dashboard:
     vertical_layout: scroll
 runtime: shiny
 ---
+
+<style>textarea.form-control {background-color: #f0f0f0;}</style>
 
 ```{js openInNew}
 var links = document.links;
@@ -23,9 +25,7 @@ library(shiny)
 library(tidyverse)
 library(DT)
 library(shinyWidgets)
-
 source("working.R")
-
 ```
 
 Cheatsheet {data-orientation=columns}
@@ -62,28 +62,37 @@ Column
 
 ### SAS Documentations
 
-- [SAS Procedures](https://go.documentation.sas.com/?cdcId=pgmsascdc&cdcVersion=9.4_3.4&docsetId=allprodsproc&docsetTarget=procedures.htm&locale=en)
-
-- [SAS Data Steps](https://go.documentation.sas.com/?cdcId=pgmsascdc&cdcVersion=9.4_3.4&docsetId=lestmtsref&docsetTarget=p08st7rzfn0dgin1fml8hq40hlho.htm&locale=en)
+- [SAS Procedures](https://go.documentation.sas.com/?cdcId=pgmsascdc&cdcVersion=9.4_3.4&docsetId=allprodsproc&docsetTarget=procedures.htm&locale=en) | [SAS Data Steps](https://go.documentation.sas.com/?cdcId=pgmsascdc&cdcVersion=9.4_3.4&docsetId=lestmtsref&docsetTarget=p08st7rzfn0dgin1fml8hq40hlho.htm&locale=en)
 
 - [Functions](https://go.documentation.sas.com/?cdcId=pgmsascdc&cdcVersion=9.4_3.4&docsetId=lefunctionsref&docsetTarget=n01f5qrjoh9h4hn1olbdpb5pr2td.htm&locale=en)
 
+- [PROC tabulate](http://support.sas.com/resources/papers/proceedings09/039-2009.pdf)
 
-### Working with Formats
+### Global Vars
 
 <p><pre>
-ENDDT = input(substr(str, 1, 10), yymmdd10.);
-format ENDDT yymmdd10.;
-ADY = intck('day', STARTDT, ENDDT);
+%let varname = value; *define;
+do &varname;  *use;
+
+proc sql;
+ select name into :VARNAME separated by ' '
+  from dictionary.columns
+  where memname= "DATASET";
+quit;
+
 </pre></p>
 
-### Working with first. and count
+
+
+### PROC Transpose wide->long
 
 <p><pre>
- count + 1; 
- by USUBJID;
- if first.USUBJID then count = 1;
- SEQ = count;
+PROC TRANSPOSE data=input 
+               out=output (drop=_NAME_ _label_);
+	by [the combination to identify];
+	id [move to column];
+	var [column to be transposed to row];
+RUN;
 </pre></p>
 
 ### PROC output styles
@@ -98,16 +107,7 @@ PROC FREQ data=input
 RUN;
 </pre></p>
 
-### PROC Transpose wide->long
 
-<p><pre>
-PROC TRANSPOSE data=input 
-               out=output (drop=_NAME_ _label_);
-	by [the combination to identify];
-	id [move to column];
-	var [column to be transposed to row];
-RUN;
-</pre></p>
 
 
 
@@ -122,26 +122,72 @@ Column
 
 - [SDTM v1.7](https://www.cdisc.org/standards/foundational/sdtm/sdtm-v1-7) | [SDTMIG v3.3](https://www.cdisc.org/standards/foundational/sdtmig/sdtmig-v3-3) | [v3.2 pdf](https://www.cdisc.org/system/files/members/standard/foundational/sdtmig/sdtmig_20v3.2_20noportfolio.pdf)
 
-- [ADaM v2.1](https://www.cdisc.org/system/files/members/standard/foundational/adam/analysis_data_model_v2.1.pdf) | [ADaMIG v1.1](https://www.cdisc.org/system/files/members/standard/foundational/adam/ADaMIG_v1.1.pdf) | [ADaM Examples](https://www.cdisc.org/system/files/members/standard/foundational/adam/adam_examples_final.pdf)
+- [ADaM v2.1](https://www.cdisc.org/system/files/members/standard/foundational/adam/analysis_data_model_v2.1.pdf) | [ADaMIG v1.1](https://www.cdisc.org/system/files/members/standard/foundational/adam/ADaMIG_v1.1.pdf) | [ADaM OCCDS v1.0](https://www.cdisc.org/system/files/members/standard/foundational/adam/ADaM_OCCDS_v1.0.pdf) | [ADaM Examples](https://www.cdisc.org/system/files/members/standard/foundational/adam/adam_examples_final.pdf)
 
 
 - [Controlled Terminology](https://evs.nci.nih.gov/ftp1/CDISC/SDTM/SDTM%20Terminology.html)
 
 - [CDISC Glossary](https://www.cdisc.org/system/files/members/standard/foundational/glossary/CDISC%20Glossary%20v11.pdf)
 
-<center>
-[AE](https://www.cdisc.org/standards/foundational/sdtmig/sdtmig-v3-3#Adverse+Events) | [EX](https://www.cdisc.org/standards/foundational/sdtmig/sdtmig-v3-3#Exposure)
-</center>
 
-### Important Notes
+### STDM Keys
 
 [relative timing](https://www.cdisc.org/standards/foundational/sdtmig/sdtmig-v3-3#Use+of+Relative+Timing+Variables) | --STRF -- ENRF --STRTPT --STTPT --ENRTPT --ENTPT 
 <br />
 BEFORE DURING DURING/AFTER AFTER U (=unkonwn) Ongoing Prior
 
+### ADaM Keys
 
-GCP {data-orientation=rows}
+w=[1-9] xx=[01-99] y=[1-99] zz=[01-99]
+
+<p><pre>
+-N	  converted from character to numeric, e.g. SEXN
+-FL	  flag, non-missing "Y" or "N"
+-DT   staring dates, -EDTM end datetimes, -STM  start times
+-DTF  imputation flag for datetimes
+-GRy  gourping vars
+A-	  analysis-ready vars, with proper imputation
+</pre></p>
+
+### Steps to determine BDS ADaM
+
+1. from source (SDTM), creation of PARAM, AVISIT, AVAL, AVALC, plus identifiers and traceability;
+
+2. adding derived rows or column, based on rules:
+
+-- Rule 1: new column if fun(AVAL, BASE), fun is parameter-invariant, NO transform of BASE<br />
+-- Rule 2: new row (i.e. PARAM, AVAL) if not rule 1<br />
+-- Rule 3-4: new row if fun(multiple rows)<br />
+-- Rule 5:  new row if fun(multiple params)<br />
+-- Rule 6: new row for different baseline definitions
+
+CDISC {data-orientation=rows}
 =======================================================================
+
+Row
+-----------------------------------------------------------------------
+
+### Clinical Trial Scope
+- PMW (project management workbook)
+- protocol
+- SAP (statistical analysis plan), TFL-shell (table, listing, figures)
+- SAR (statistical analysis report), TFL
+- CSR (clinical study report)
+<p></p>
+
+### Procedure with Validation QC
+- Source Data
+- Standardisation
+- Analysis
+- TLF
+<p></p>
+
+### Study types and designs
+- superiority trials
+- non-inferiority trails
+- equivalence trails
+- parallel design and cross-over design
+<p></p>
 
 Row {data-height=600}
 -----------------------------------------------------------------------
@@ -197,9 +243,25 @@ visNetwork(nodes, edges, width = "100%", height = "600px") %>%
 ```
 
 
-### Something to Cover
+### ADaM at a Glance
 
-to be furnished
+```{r}
+
+nodes <- data.frame(id = c(1, 11:14, 21:27),
+                    label = c("ADaM", "ADSL", "BDS", "OCCDS", "OTHER",
+                              "ADSL", "ADLB", "ADEFF", "ADTTE", "ADAE", "ADCM", "ADMV"),
+                    title = c("ADaM Datasets", "Subject-Level Analysis Dataset", "Basic Data Structure", "Occurence Data", "ADam other dataset", "ADSL", "ADLB", "ADEFF", "ADTTE", "ADAE", "ADCM", "ADMV"),
+                    group = c("ADaM", rep("ADaM Categories", 4), rep("ADaM Datasets", 7)),
+                    shape = c("database", rep("circle",4), rep("box", 7)))
+
+edges <- data.frame(from = c(rep(1,4), 11, 12, 12, 12, 13, 13, 14),
+                    to   = c(11:14, 21:27))
+
+visNetwork(nodes, edges, width = "100%", height = "600px") %>%
+  visOptions(highlightNearest = list(enabled = T, hover = T), 
+             selectedBy = "group")
+```
+
 
 
 SDTM
@@ -238,10 +300,10 @@ Based on [SDTMIG v3.3](https://www.cdisc.org/standards/foundational/sdtmig/sdtmi
 Column
 -----------------------------------------------------------------------
 
-### Tables
+### Domains
 
 ```{r}
-pickerInput("sdtm_domain", "Domains",
+pickerInput("sdtm_domain", "",
             choices = catlog %>% 
               select(Class, Name) %>% mutate(id = 1:nrow(catlog)) %>% 
               spread(key = "Class", value = "Name") %>% select(-id) %>%
@@ -256,10 +318,11 @@ pickerInput("sdtm_domain", "Domains",
 
 
 textAreaInput("code", "", value = "here to show code", rows = 15,  resize = "both") %>% 
-  tagAppendAttributes(style = 'width: 100%; font-family: "Courier New"; ') #"Lucida Console" 
+  tagAppendAttributes(style = 'width: 100%; font-family: "Courier New";') 
+  # serif font: "Lucida Console" 
 
 textAreaInput("varline", "Variable Order:", value = "here to show code", rows = 3, resize = "both") %>% 
-  tagAppendAttributes(style = 'width: 100%; font-family: "Courier New"; ') #"Lucida Console" 
+  tagAppendAttributes(style = 'width: 100%; font-family: "Courier New";')
 
 observeEvent({input$lang; input$sdtm_core; input$sdtm_domain}, {
   
