better structure for future extension

--- a/main.Rmd
+++ b/main.Rmd
@@ -19,351 +19,21 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
 ```
 
 ```{r setup, include=FALSE}
-library(visNetwork)
-library(flexdashboard)
-library(shiny)
+library(shiny); library(flexdashboard); library(shinyWidgets)
+library(visNetwork); library(DT)
 library(tidyverse)
-library(DT)
-library(shinyWidgets)
-source("working.R")
-```
-
-Cheatsheet {data-orientation=columns}
-=======================================================================
-
-Column
------------------------------------------------------------------------
-
-### R Links
-
-- [R-Markdown Dashboard](https://rmarkdown.rstudio.com/lesson-12.html) | [R-Markdown Webstie](https://rmarkdown.rstudio.com/rmarkdown_websites.html)
-
-- [R-Markdown Styling](https://rmarkdown.rstudio.com/html_document_format.html#appearance_and_style) | [Bootstrap Themes](https://bootswatch.com/)
-
-- [Shiny Server Manual](http://docs.rstudio.com/shiny-server/)
-
-### Tidyverse
-
-Modify, Subset, Keep/Drop, Extract, Summarize
-<p><pre>
-datatable %>% 
-  mutate(new_var = fun(old_vars)) %>%
-  filter(var = cond) %>%
-  select(var1, var2) %>%  
-  pull(var1) %>% 
-  summarize_at(c("var1", "var2"), fun)
-</pre></p>
-
-
-
-
-Column
------------------------------------------------------------------------
-
-### SAS Documentations
-
-- [SAS Procedures](https://go.documentation.sas.com/?cdcId=pgmsascdc&cdcVersion=9.4_3.4&docsetId=allprodsproc&docsetTarget=procedures.htm&locale=en) | [SAS Data Steps](https://go.documentation.sas.com/?cdcId=pgmsascdc&cdcVersion=9.4_3.4&docsetId=lestmtsref&docsetTarget=p08st7rzfn0dgin1fml8hq40hlho.htm&locale=en)
-
-- [Functions](https://go.documentation.sas.com/?cdcId=pgmsascdc&cdcVersion=9.4_3.4&docsetId=lefunctionsref&docsetTarget=n01f5qrjoh9h4hn1olbdpb5pr2td.htm&locale=en)
-
-- [PROC tabulate](http://support.sas.com/resources/papers/proceedings09/039-2009.pdf)
-
-### Global Vars
-
-<p><pre>
-%let varname = value; *define;
-do &varname;  *use;
-
-proc sql;
- select name into :VARNAME separated by ' '
-  from dictionary.columns
-  where memname= "DATASET";
-quit;
-
-</pre></p>
-
-
-
-### PROC Transpose wide->long
-
-<p><pre>
-PROC TRANSPOSE data=input 
-               out=output (drop=_NAME_ _label_);
-	by [the combination to identify];
-	id [move to column];
-	var [column to be transposed to row];
-RUN;
-</pre></p>
-
-### PROC output styles
-
-<p><pre>
-PROC MEANS noprint data=input;
-	var bmi;
-	by cohort;
-	output out = output (drop = _freq_ _type_);
-PROC FREQ data=input
-  table var1 * var2 / out = output;
-RUN;
-</pre></p>
-
-
-
-
-
-
-
-
-
-Column
------------------------------------------------------------------------
-
-### CDISC.org References
-
-- [SDTM v1.7](https://www.cdisc.org/standards/foundational/sdtm/sdtm-v1-7) | [SDTMIG v3.3](https://www.cdisc.org/standards/foundational/sdtmig/sdtmig-v3-3) | [v3.2 pdf](https://www.cdisc.org/system/files/members/standard/foundational/sdtmig/sdtmig_20v3.2_20noportfolio.pdf)
-
-- [ADaM v2.1](https://www.cdisc.org/system/files/members/standard/foundational/adam/analysis_data_model_v2.1.pdf) | [ADaMIG v1.1](https://www.cdisc.org/system/files/members/standard/foundational/adam/ADaMIG_v1.1.pdf) | [ADaM OCCDS v1.0](https://www.cdisc.org/system/files/members/standard/foundational/adam/ADaM_OCCDS_v1.0.pdf) | [ADaM Examples](https://www.cdisc.org/system/files/members/standard/foundational/adam/adam_examples_final.pdf)
-
-
-- [Controlled Terminology](https://evs.nci.nih.gov/ftp1/CDISC/SDTM/SDTM%20Terminology.html)
-
-- [CDISC Glossary](https://www.cdisc.org/system/files/members/standard/foundational/glossary/CDISC%20Glossary%20v11.pdf)
-
-
-### STDM Keys
-
-[relative timing](https://www.cdisc.org/standards/foundational/sdtmig/sdtmig-v3-3#Use+of+Relative+Timing+Variables) | --STRF -- ENRF --STRTPT --STTPT --ENRTPT --ENTPT 
-<br />
-BEFORE DURING DURING/AFTER AFTER U (=unkonwn) Ongoing Prior
-
-### ADaM Keys
-
-w=[1-9] xx=[01-99] y=[1-99] zz=[01-99]
-
-<p><pre>
--N	  converted from character to numeric, e.g. SEXN
--FL	  flag, non-missing "Y" or "N"
--DT   staring dates, -EDTM end datetimes, -STM  start times
--DTF  imputation flag for datetimes
--GRy  gourping vars
-A-	  analysis-ready vars, with proper imputation
-</pre></p>
-
-### Steps to determine BDS ADaM
-
-1. from source (SDTM), creation of PARAM, AVISIT, AVAL, AVALC, plus identifiers and traceability;
-
-2. adding derived rows or column, based on rules:
-
--- Rule 1: new column if fun(AVAL, BASE), fun is parameter-invariant, NO transform of BASE<br />
--- Rule 2: new row (i.e. PARAM, AVAL) if not rule 1<br />
--- Rule 3-4: new row if fun(multiple rows)<br />
--- Rule 5:  new row if fun(multiple params)<br />
--- Rule 6: new row for different baseline definitions
-
-CDISC {data-orientation=rows}
-=======================================================================
-
-Row
------------------------------------------------------------------------
-
-### Clinical Trial Scope
-- PMW (project management workbook)
-- protocol
-- SAP (statistical analysis plan), TFL-shell (table, listing, figures)
-- SAR (statistical analysis report), TFL
-- CSR (clinical study report)
-<p></p>
-
-### Procedure with Validation QC
-- Source Data
-- Standardisation
-- Analysis
-- TLF
-<p></p>
-
-### Study types and designs
-- superiority trials
-- non-inferiority trails
-- equivalence trails
-- parallel design and cross-over design
-<p></p>
-
-Row {data-height=600}
------------------------------------------------------------------------
-
-### SDTM at a Glance
-
-```{r}
-keys <- c("Data Class", "Variable Roles", "Core Variables")
-
-grp01 <- data.frame(id = 1:3,
-                   label = keys,
-                   title = c("define tables", "define variables", "some "),
-                   group = keys,
-                   shape = c("database", "circle", "star"))
-grp11 <- data.frame(id = 11:16,
-                   label = c("Inteventions",  "Events", "Findings", "Domain", "Trial Design", "Relationship"),
-                   title = NA,
-                   group = keys[1],
-                   shape = "ellipse")
-grp12 <- data.frame(id = 21:24,
-                   label = c("Identifier", "Topic", "Timing", "Qualifier"),
-                   title = NA,
-                   group = keys[2],
-                   shape = "ellipse")
-grp13 <- data.frame(id = 31:33,
-                   label = c("Required", "Expected", "Permissible"),
-                   title = NA,
-                   group = keys[3], 
-                   shape = "text")
-grp21 <- data.frame(id = 101:114,
-                   label = c("CM", "EX", "AE", "DS", "VS", "PE", "DM", "CO", "SV", "TA", "TI", "TV", "RELREC", "SUPP--"),
-                   title = c("CM Conmeds", "EX Exposure", "AE Adverse Events", "DS Disposition Events", "VS Vital Signs", "PE Pysical Exam", "DM Demographics", "CO Comments", "SV Subject Visits", "TA Trial Arms", "TI Trial Inclusion", "TV Trial Visits", "RELREC Related Records", "SUPP-- Supplemental Qualifiers"),
-                   group = "- tables",
-                   shape = "box")
-grp22 <- data.frame(id = 201:212,
-                    label = c("STUDYID", "USUBJID", "--SEQ", "LBTEST", "AETERM", "CMTRT", "LBDTC", "AESTDTC", "EXENDTC", "LBORRES", "AESEV", "CMDOSE"),
-                    title = c("STUDYID Study ID", "USUBJID Subject ID", "--SEQ Sequence ID", "LBTEST Lab Test Name", "AETERM Adverse Event Term", "CMTRT Reported Drug Name", "LBDTC Lab Assessment Date", "AESTDTC Adverse Event Start Date", "EXENDTC Exposure End Date", "LBORRES Lab Test Result", "AESEV Adverse Event Severity", "CMDOSE Conmed Dose"),
-                    group = "- variables",
-                    shape = "box")
-
-nodes <- rbind(grp01, grp11, grp12, grp13, grp21, grp22)
-edges <- data.frame(from = c(rep(1, 6), rep(2, 4), rep(3, 3),
-                             rep(11,2), rep(12,2), rep(13,2), rep(14,3), rep(15,3), rep(16,2),
-                             rep(21,3), rep(22,3), rep(23,3), rep(24,3)),
-                    to   = c(11:16, 21:24, 31:33,
-                             101:114,
-                             201:212))
-
-visNetwork(nodes, edges, width = "100%", height = "600px") %>%
-  visOptions(highlightNearest = list(enabled = T, hover = T), 
-             selectedBy = "group")  %>%
-  visLayout(randomSeed = 69)
+source("Rmd.R")
 ```
 
 
-### ADaM at a Glance
-
-```{r}
-
-nodes <- data.frame(id = c(1, 11:14, 21:27),
-                    label = c("ADaM", "ADSL", "BDS", "OCCDS", "OTHER",
-                              "ADSL", "ADLB", "ADEFF", "ADTTE", "ADAE", "ADCM", "ADMV"),
-                    title = c("ADaM Datasets", "Subject-Level Analysis Dataset", "Basic Data Structure", "Occurence Data", "ADam other dataset", "ADSL", "ADLB", "ADEFF", "ADTTE", "ADAE", "ADCM", "ADMV"),
-                    group = c("ADaM", rep("ADaM Categories", 4), rep("ADaM Datasets", 7)),
-                    shape = c("database", rep("circle",4), rep("box", 7)))
-
-edges <- data.frame(from = c(rep(1,4), 11, 12, 12, 12, 13, 13, 14),
-                    to   = c(11:14, 21:27))
-
-visNetwork(nodes, edges, width = "100%", height = "600px") %>%
-  visOptions(highlightNearest = list(enabled = T, hover = T), 
-             selectedBy = "group")
+```{r child = "00-REF.Rmd"}
 ```
 
-
-
-SDTM
-=======================================================================
-
-Column {.sidebar}
------------------------------------------------------------------------
-
-Settings
-
-```{r}
-tables <- readRDS("sdtm_domain.rds")
-catlog <- tables[[1]]
-
-radioGroupButtons(inputId = "lang", label = "", choices = c("SQL", "SAS"), status = "primary")
-
-awesomeCheckboxGroup(inputId = "sdtm_core", label = "Core Variables", inline = F,
-                     choices = c("Req", "Perm", "Exp"), selected = c("Req", "Perm", "Exp"))
-
-tags$hr()
-
-renderUI(tags$a(input$sdtm_domain %>% word(1) %>% paste("Veiw",., "on CDISC"), 
-                href =  paste0("https://www.cdisc.org/standards/foundational/sdtmig/sdtmig-v3-3#",
-                               input$sdtm_domain %>% word(2:5) %>% na.omit() %>% paste(collapse = "+")),
-                class = "btn btn-primary", 
-                target="_blank"))
-
+```{r child = "01-CDISC.Rmd"}
 ```
 
-
-<hr />
-
-
-Based on [SDTMIG v3.3](https://www.cdisc.org/standards/foundational/sdtmig/sdtmig-v3-3)
-
-Column
------------------------------------------------------------------------
-
-### Domains
-
-```{r}
-pickerInput("sdtm_domain", "",
-            choices = catlog %>% 
-              select(Class, Name) %>% mutate(id = 1:nrow(catlog)) %>% 
-              spread(key = "Class", value = "Name") %>% select(-id) %>%
-              as.list() %>% lapply(function(x) x[!is.na(x)]),
-            options = list(`live-search` = TRUE))
-
-# dropdownButton(
-#   renderDT(tables[[catlog$index[which(catlog$Name == input$sdtm_domain)]]],
-#                     options = list(pageLength = 999, dom = 'ft')),
-#   circle = F, status = "primary", label = "View Domain Details", width = "100%"
-# )
-
-
-textAreaInput("code", "", value = "here to show code", rows = 15,  resize = "both") %>% 
-  tagAppendAttributes(style = 'width: 100%; font-family: "Courier New";') 
-  # serif font: "Lucida Console" 
-
-textAreaInput("varline", "Variable Order:", value = "here to show code", rows = 3, resize = "both") %>% 
-  tagAppendAttributes(style = 'width: 100%; font-family: "Courier New";')
-
-observeEvent({input$lang; input$sdtm_core; input$sdtm_domain}, {
-  
-  table <-tables[[catlog$index[which(catlog$Name == input$sdtm_domain)]]] 
-  info <- table %>% count(Core) %>% mutate(text = paste(Core, n)) %>% pull(text) %>% paste(collapse = " | ")
-  
-  updateTextAreaInput(session, "code",
-                      label = paste("Total", nrow(table), "variables |", info),
-                      value = table %>% filter(Core %in% input$sdtm_core) %>% getCode(input$lang))
-  updateTextAreaInput(session, "varline",
-                      value = table %>% filter(Core %in% input$sdtm_core) %>% pull(1) %>% paste(collapse = " ") %>% paste0(";"))
-})
-
-
+```{r child = "02-SDTM.Rmd"}
 ```
 
-<center>= = = end = = =</center>
-
-
-```{r, eval = F}
-# the DROPDOWN and DataTABLE are hidden
-dropdownButton(
-
-  radioGroupButtons(inputId = "lang", label = "", 
-                    choices = c("SQL", "SAS"), status = "primary"),
-  
-  awesomeCheckboxGroup(inputId = "sdtm_core", label = "",
-                       choices = c("Req", "Perm", "Exp"), selected = c("Req", "Exp"),
-                       inline =  TRUE),
-  tags$hr(),
-
-  renderPrint(
-      tables[[catlog$index[which(catlog$Name == input$sdtm_domain)]]] %>% 
-        filter(Core %in% input$sdtm_core) %>%
-        getCode(input$lang) %>%
-        cat()
-  ),
-  
-  circle = F, status = "primary", label = "Get Code", width = "699px"
-)
-
-renderDT(tables[[catlog$index[which(catlog$Name == input$sdtm_domain)]]],
-                    options = list(pageLength = 999, dom = 'ft'))
+```{r child = "03-SQL.Rmd"}
 ```
