--- a/00-REF.Rmd
+++ b/00-REF.Rmd
@@ -12,7 +12,7 @@ Column
 
 - [Shiny Server Manual](http://docs.rstudio.com/shiny-server/)
 
-### Tidyverse
+### R Tidyverse
 
 Modify, Subset, Keep/Drop, Extract, Summarize
 <p><pre>
@@ -24,7 +24,21 @@ datatable %>%
   summarize_at(c("var1", "var2"), fun)
 </pre></p>
 
+### SAS Proceedings List
 
+20MAR Summary on Mixed Models
+
+27MAR [Proc SQL | Macro Var & SQL](#section-proc-sql)
+
+03APR Subroutines and SAS functions
+
+10APR Functions and PROC IMPL (continued)
+
+17APR [Advanced topics of arrary, vname and do over](#section-greattricks)
+
+24APR Oncology Pharma 
+
+02MAY [Proc Formats as a life-changer](#section-greattricks)
 
 
 Column
